v0.0.1/modules/schema/pages/class/AsynchronousMachineUserDefined.adoc
= `AsynchronousMachineUserDefined`
:toclevels: 4


+++Asynchronous machine whose dynamic behaviour is described by a user-defined model.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:AsynchronousMachineUserDefined`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]
**** xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
***** *`AsynchronousMachineUserDefined`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
AsynchronousMachineUserDefined {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ProprietaryParameterDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



AsynchronousMachine {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TurbineGovernorDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



MechanicalLoadDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindTurbineType1or2Dynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}









DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




AsynchronousMachineUserDefined -> ProprietaryParameterDynamics: ProprietaryParameterDynamics


AsynchronousMachineUserDefined -> AsynchronousMachine: AsynchronousMachine


AsynchronousMachineUserDefined -> TurbineGovernorDynamics: TurbineGovernorDynamics


AsynchronousMachineUserDefined -> MechanicalLoadDynamics: MechanicalLoadDynamics


AsynchronousMachineUserDefined -> WindTurbineType1or2Dynamics: WindTurbineType1or2Dynamics





AsynchronousMachineUserDefined -> DiagramObject: DiagramObjects


AsynchronousMachineUserDefined -> InstanceSet: InstanceSet


AsynchronousMachineUserDefined -> Name: Names


AsynchronousMachineUserDefined -> ChangeSetMember: PropertiesCIMDataObject


AsynchronousMachineUserDefined -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<AsynchronousMachine,`AsynchronousMachine`>>
| 1
| xref::class/AsynchronousMachine.adoc[`AsynchronousMachine`]
| +++Asynchronous machine to which this asynchronous machine dynamics model applies.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<proprietary,`proprietary`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Behaviour is based on a proprietary model as opposed to a detailed model.
true = user-defined model is proprietary with behaviour mutually understood by sending and receiving applications and parameters passed as general attributes
false = user-defined model is explicitly defined in terms of control blocks and their input and output signals.+++

| <<ProprietaryParameterDynamics,`ProprietaryParameterDynamics`>>
| 0..*
| xref::class/ProprietaryParameterDynamics.adoc[`ProprietaryParameterDynamics`]
| +++Parameter of this proprietary user-defined model.+++

| <<MechanicalLoadDynamics,`MechanicalLoadDynamics`>>
| 0..1
| xref::class/MechanicalLoadDynamics.adoc[`MechanicalLoadDynamics`]
| +++Mechanical load model associated with this asynchronous machine model.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<TurbineGovernorDynamics,`TurbineGovernorDynamics`>>
| 0..1
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
| +++Turbine-governor model associated with this asynchronous machine model.+++

| <<WindTurbineType1or2Dynamics,`WindTurbineType1or2Dynamics`>>
| 0..1
| xref::class/WindTurbineType1or2Dynamics.adoc[`WindTurbineType1or2Dynamics`]
| +++Wind generator type 1 or type 2 model associated with this asynchronous machine model.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<damping,`damping`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Damping torque coefficient (<i>D</i>) (&gt;= 0).  A proportionality constant that, when multiplied by the angular velocity of the rotor poles with respect to the magnetic field (frequency), results in the damping torque.  This value is often zero when the sources of damping torques (generator damper windings, load damping effects, etc.) are modelled in detail.  Typical value = 0.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<inertia,`inertia`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Inertia constant of generator or motor and mechanical load (<i>H</i>) (&gt; 0).  This is the specification for the stored energy in the rotating mass when operating at rated speed.  For a generator, this includes the generator plus all other elements (turbine, exciter) on the same shaft and has units of MW x s.  For a motor, it includes the motor plus its mechanical load. Conventional units are PU on the generator MVA base, usually expressed as MW x s / MVA or just s. This value is used in the accelerating power reference frame for operator training simulator solutions.  Typical value = 3.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<saturationFactor,`saturationFactor`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Saturation factor at rated terminal voltage (<i>S1</i>) (&gt;= 0).  Not used by simplified model.  Defined by defined by <i>S</i>(<i>E1</i>) in the SynchronousMachineSaturationParameters diagram.  Typical value = 0,02.+++

| <<saturationFactor120,`saturationFactor120`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Saturation factor at 120% of rated terminal voltage (<i>S12</i>) (&gt;= RotatingMachineDynamics.saturationFactor). Not used by the simplified model, defined by <i>S</i>(<i>E2</i>) in the SynchronousMachineSaturationParameters diagram.  Typical value = 0,12.+++

| <<statorLeakageReactance,`statorLeakageReactance`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Stator leakage reactance (<i>Xl</i>) (&gt;= 0). Typical value = 0,15.+++

| <<statorResistance,`statorResistance`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Stator (armature) resistance (<i>Rs</i>) (&gt;= 0). Typical value = 0,005.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AsynchronousMachine]
=== `AsynchronousMachine`
+++Asynchronous machine to which this asynchronous machine dynamics model applies.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AsynchronousMachineDynamics.AsynchronousMachine`
| Cardinality
| 1
| Type
| xref::class/AsynchronousMachine.adoc[`AsynchronousMachine`]

| Inherited from
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]


|===

//[discrete]
[#damping]
=== `damping`
+++Damping torque coefficient (<i>D</i>) (&gt;= 0).  A proportionality constant that, when multiplied by the angular velocity of the rotor poles with respect to the magnetic field (frequency), results in the damping torque.  This value is often zero when the sources of damping torques (generator damper windings, load damping effects, etc.) are modelled in detail.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.damping`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#inertia]
=== `inertia`
+++Inertia constant of generator or motor and mechanical load (<i>H</i>) (&gt; 0).  This is the specification for the stored energy in the rotating mass when operating at rated speed.  For a generator, this includes the generator plus all other elements (turbine, exciter) on the same shaft and has units of MW x s.  For a motor, it includes the motor plus its mechanical load. Conventional units are PU on the generator MVA base, usually expressed as MW x s / MVA or just s. This value is used in the accelerating power reference frame for operator training simulator solutions.  Typical value = 3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.inertia`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#MechanicalLoadDynamics]
=== `MechanicalLoadDynamics`
+++Mechanical load model associated with this asynchronous machine model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AsynchronousMachineDynamics.MechanicalLoadDynamics`
| Cardinality
| 0..1
| Type
| xref::class/MechanicalLoadDynamics.adoc[`MechanicalLoadDynamics`]

| Inherited from
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#proprietary]
=== `proprietary`
+++Behaviour is based on a proprietary model as opposed to a detailed model.
true = user-defined model is proprietary with behaviour mutually understood by sending and receiving applications and parameters passed as general attributes
false = user-defined model is explicitly defined in terms of control blocks and their input and output signals.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AsynchronousMachineUserDefined.proprietary`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#ProprietaryParameterDynamics]
=== `ProprietaryParameterDynamics`
+++Parameter of this proprietary user-defined model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AsynchronousMachineUserDefined.ProprietaryParameterDynamics`
| Cardinality
| 0..*
| Type
| xref::class/ProprietaryParameterDynamics.adoc[`ProprietaryParameterDynamics`]


|===

//[discrete]
[#saturationFactor]
=== `saturationFactor`
+++Saturation factor at rated terminal voltage (<i>S1</i>) (&gt;= 0).  Not used by simplified model.  Defined by defined by <i>S</i>(<i>E1</i>) in the SynchronousMachineSaturationParameters diagram.  Typical value = 0,02.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.saturationFactor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

//[discrete]
[#saturationFactor120]
=== `saturationFactor120`
+++Saturation factor at 120% of rated terminal voltage (<i>S12</i>) (&gt;= RotatingMachineDynamics.saturationFactor). Not used by the simplified model, defined by <i>S</i>(<i>E2</i>) in the SynchronousMachineSaturationParameters diagram.  Typical value = 0,12.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.saturationFactor120`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

//[discrete]
[#statorLeakageReactance]
=== `statorLeakageReactance`
+++Stator leakage reactance (<i>Xl</i>) (&gt;= 0). Typical value = 0,15.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.statorLeakageReactance`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

//[discrete]
[#statorResistance]
=== `statorResistance`
+++Stator (armature) resistance (<i>Rs</i>) (&gt;= 0). Typical value = 0,005.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.statorResistance`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TurbineGovernorDynamics]
=== `TurbineGovernorDynamics`
+++Turbine-governor model associated with this asynchronous machine model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AsynchronousMachineDynamics.TurbineGovernorDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| Inherited from
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]


|===

//[discrete]
[#WindTurbineType1or2Dynamics]
=== `WindTurbineType1or2Dynamics`
+++Wind generator type 1 or type 2 model associated with this asynchronous machine model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AsynchronousMachineDynamics.WindTurbineType1or2Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/WindTurbineType1or2Dynamics.adoc[`WindTurbineType1or2Dynamics`]

| Inherited from
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]


|===


