v1.1.0/modules/schema/pages/class/AsynchronousMachineUserDefined.adoc
= `AsynchronousMachineUserDefined`
:toclevels: 4


+++Asynchronous machine whose dynamic behaviour is described by a user-defined model.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:AsynchronousMachineUserDefined`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]
**** xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
***** *`AsynchronousMachineUserDefined`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ProprietaryParameterDynamics,`ProprietaryParameterDynamics`>>
//| [[slots_table.ProprietaryParameterDynamics]]<<ProprietaryParameterDynamics,`ProprietaryParameterDynamics`>>
| 0..* +
xref::class/ProprietaryParameterDynamics.adoc[`ProprietaryParameterDynamics`]
| +++Parameter of this proprietary user-defined model.+++
| _n/a_

| <<proprietary,`proprietary`>>
//| [[slots_table.proprietary]]<<proprietary,`proprietary`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Behaviour is based on a proprietary model as opposed to a detailed model.
true = user-defined model is proprietary with...+++
| _n/a_

| <<AsynchronousMachine,`AsynchronousMachine`>>
//| [[slots_table.AsynchronousMachine]]<<AsynchronousMachine,`AsynchronousMachine`>>
| 1 +
xref::class/AsynchronousMachine.adoc[`AsynchronousMachine`]
| +++Asynchronous machine to which this asynchronous machine dynamics model applies.+++
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| <<MechanicalLoadDynamics,`MechanicalLoadDynamics`>>
//| [[slots_table.MechanicalLoadDynamics]]<<MechanicalLoadDynamics,`MechanicalLoadDynamics`>>
| 0..1 +
xref::class/MechanicalLoadDynamics.adoc[`MechanicalLoadDynamics`]
| +++Mechanical load model associated with this asynchronous machine model.+++
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| <<TurbineGovernorDynamics,`TurbineGovernorDynamics`>>
//| [[slots_table.TurbineGovernorDynamics]]<<TurbineGovernorDynamics,`TurbineGovernorDynamics`>>
| 0..1 +
xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
| +++Turbine-governor model associated with this asynchronous machine model.+++
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| <<WindTurbineType1or2Dynamics,`WindTurbineType1or2Dynamics`>>
//| [[slots_table.WindTurbineType1or2Dynamics]]<<WindTurbineType1or2Dynamics,`WindTurbineType1or2Dynamics`>>
| 0..1 +
xref::class/WindTurbineType1or2Dynamics.adoc[`WindTurbineType1or2Dynamics`]
| +++Wind generator type 1 or type 2 model associated with this asynchronous machine model.+++
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| <<damping,`damping`>>
//| [[slots_table.damping]]<<damping,`damping`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Damping torque coefficient (<i>D</i>) (&gt;= 0).  A proportionality constant that, when multiplied by the angular velocity...+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<inertia,`inertia`>>
//| [[slots_table.inertia]]<<inertia,`inertia`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Inertia constant of generator or motor and mechanical load (<i>H</i>) (&gt; 0).  This is the specification for the stored...+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<saturationFactor,`saturationFactor`>>
//| [[slots_table.saturationFactor]]<<saturationFactor,`saturationFactor`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Saturation factor at rated terminal voltage (<i>S1</i>) (&gt;= 0).  Not used by simplified model.  Defined by defined by...+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<saturationFactor120,`saturationFactor120`>>
//| [[slots_table.saturationFactor120]]<<saturationFactor120,`saturationFactor120`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Saturation factor at 120% of rated terminal voltage (<i>S12</i>) (&gt;= RotatingMachineDynamics.saturationFactor). Not used...+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<statorLeakageReactance,`statorLeakageReactance`>>
//| [[slots_table.statorLeakageReactance]]<<statorLeakageReactance,`statorLeakageReactance`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Stator leakage reactance (<i>Xl</i>) (&gt;= 0). Typical value = 0,15.+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<statorResistance,`statorResistance`>>
//| [[slots_table.statorResistance]]<<statorResistance,`statorResistance`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Stator (armature) resistance (<i>Rs</i>) (&gt;= 0). Typical value = 0,005.+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AsynchronousMachine]
=== `AsynchronousMachine`
+++Asynchronous machine to which this asynchronous machine dynamics model applies.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AsynchronousMachineDynamics.AsynchronousMachine`
| Cardinality
| 1
| Type
| xref::class/AsynchronousMachine.adoc[`AsynchronousMachine`]

| Inherited from
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.AsynchronousMachine,&#10548;>>
--
////


//[discrete]
[#damping]
=== `damping`
+++Damping torque coefficient (<i>D</i>) (&gt;= 0).  A proportionality constant that, when multiplied by the angular velocity of the rotor poles with respect to the magnetic field (frequency), results in the damping torque.  This value is often zero when the sources of damping torques (generator damper windings, load damping effects, etc.) are modelled in detail.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.damping`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.damping,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#inertia]
=== `inertia`
+++Inertia constant of generator or motor and mechanical load (<i>H</i>) (&gt; 0).  This is the specification for the stored energy in the rotating mass when operating at rated speed.  For a generator, this includes the generator plus all other elements (turbine, exciter) on the same shaft and has units of MW x s.  For a motor, it includes the motor plus its mechanical load. Conventional units are PU on the generator MVA base, usually expressed as MW x s / MVA or just s. This value is used in the accelerating power reference frame for operator training simulator solutions.  Typical value = 3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.inertia`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.inertia,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#MechanicalLoadDynamics]
=== `MechanicalLoadDynamics`
+++Mechanical load model associated with this asynchronous machine model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AsynchronousMachineDynamics.MechanicalLoadDynamics`
| Cardinality
| 0..1
| Type
| xref::class/MechanicalLoadDynamics.adoc[`MechanicalLoadDynamics`]

| Inherited from
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.MechanicalLoadDynamics,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#proprietary]
=== `proprietary`
+++Behaviour is based on a proprietary model as opposed to a detailed model.
true = user-defined model is proprietary with behaviour mutually understood by sending and receiving applications and parameters passed as general attributes
false = user-defined model is explicitly defined in terms of control blocks and their input and output signals.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AsynchronousMachineUserDefined.proprietary`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.proprietary,&#10548;>>
--
////


//[discrete]
[#ProprietaryParameterDynamics]
=== `ProprietaryParameterDynamics`
+++Parameter of this proprietary user-defined model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AsynchronousMachineUserDefined.ProprietaryParameterDynamics`
| Cardinality
| 0..*
| Type
| xref::class/ProprietaryParameterDynamics.adoc[`ProprietaryParameterDynamics`]


|===

////
[.text-left]
--
<<slots_table.ProprietaryParameterDynamics,&#10548;>>
--
////


//[discrete]
[#saturationFactor]
=== `saturationFactor`
+++Saturation factor at rated terminal voltage (<i>S1</i>) (&gt;= 0).  Not used by simplified model.  Defined by defined by <i>S</i>(<i>E1</i>) in the SynchronousMachineSaturationParameters diagram.  Typical value = 0,02.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.saturationFactor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.saturationFactor,&#10548;>>
--
////


//[discrete]
[#saturationFactor120]
=== `saturationFactor120`
+++Saturation factor at 120% of rated terminal voltage (<i>S12</i>) (&gt;= RotatingMachineDynamics.saturationFactor). Not used by the simplified model, defined by <i>S</i>(<i>E2</i>) in the SynchronousMachineSaturationParameters diagram.  Typical value = 0,12.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.saturationFactor120`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.saturationFactor120,&#10548;>>
--
////


//[discrete]
[#statorLeakageReactance]
=== `statorLeakageReactance`
+++Stator leakage reactance (<i>Xl</i>) (&gt;= 0). Typical value = 0,15.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.statorLeakageReactance`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.statorLeakageReactance,&#10548;>>
--
////


//[discrete]
[#statorResistance]
=== `statorResistance`
+++Stator (armature) resistance (<i>Rs</i>) (&gt;= 0). Typical value = 0,005.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.statorResistance`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.statorResistance,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TurbineGovernorDynamics]
=== `TurbineGovernorDynamics`
+++Turbine-governor model associated with this asynchronous machine model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AsynchronousMachineDynamics.TurbineGovernorDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| Inherited from
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.TurbineGovernorDynamics,&#10548;>>
--
////


//[discrete]
[#WindTurbineType1or2Dynamics]
=== `WindTurbineType1or2Dynamics`
+++Wind generator type 1 or type 2 model associated with this asynchronous machine model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AsynchronousMachineDynamics.WindTurbineType1or2Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/WindTurbineType1or2Dynamics.adoc[`WindTurbineType1or2Dynamics`]

| Inherited from
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.WindTurbineType1or2Dynamics,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/ProprietaryParameterDynamics.adoc[`ProprietaryParameterDynamics`] | xref::class/ProprietaryParameterDynamics.adoc#AsynchronousMachineUserDefined[`AsynchronousMachineUserDefined`]


|===

